--- a/example/graphql_config.yaml
+++ b/example/graphql_config.yaml
@@ -3,5 +3,6 @@ graphql_endpoint: http://localhost:3000/graphql
 models_directory_path: lib/graphql/models/
 to_json_exclude_null_field: true
 use_equatable: true
+required_input_field: true
 type_override:
-  Upload: MultpartFile
+  Upload: String
