--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,7 +6,10 @@ description: A simple command-line application.
 environment:
   sdk: '>=2.7.0 <3.0.0'
 
-#dependencies:
+dependencies:
+  equatable: 1.2.6
+  meta: 1.2.4
+  graphql: ^4.0.1
 #  path: ^1.6.0
 
 dev_dependencies:
