--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,9 +10,14 @@ dependencies:
   equatable: 1.2.6
   meta: 1.2.4
   graphql: ^4.0.1
+  gql: ^0.12.4
+  build: 1.6.2
+  source_gen: 0.9.10+3
 #  path: ^1.6.0
 
 dev_dependencies:
+  build_runner: 1.11.1
   pedantic: ^1.8.0
+ # gql_code_gen: ^0.1.5
   graphql_to_dart:
     path: ../
