--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,5 +8,9 @@ environment:
 dependencies:
   yaml: ^2.2.1
   graphql: ^4.0.1
+  gql: ^0.12.4
+  gql_code_gen: ^0.1.5
+  build: 1.6.2
+  source_gen: 0.9.10+3
   recase: ^3.0.0
 
