--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,18 +3,13 @@ description: A simple dart package to generate complete Dart models from a Graph
 version: 1.1.0
 homepage: https://github.com/vikram25897/graphql_to_dart
 environment:
-  sdk: '>=2.6.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  yaml: ^2.2.1
-  graphql: ^4.0.1
-  gql: ^0.12.4
- # code_builder: ^3.7.0
-  gql_code_gen: ^0.1.5
-  build: 1.6.2
-  source_gen: 0.9.10+3
-  recase: ^3.0.0
-  #meta: 1.2.4
-  
-  
-
+  yaml: ^3.1.0
+  graphql: ^5.0.0-nullsafety.4
+  gql: ^0.13.0-nullsafety.2
+  build: ^2.0.1
+  source_gen: ^1.0.0
+  recase: ^4.0.0
+  code_builder: ^4.0.0
