--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,21 +4,21 @@ description: A simple command-line application.
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   equatable: 1.2.6
- # meta: 1.2.4
-  graphql: ^4.0.1
-  gql: ^0.12.4
-  build: 1.6.2
-  source_gen: 0.9.10+3
-  bloc: 6.1.3
+  # meta: 1.2.4
+  graphql: ^5.0.0-nullsafety.4
+  gql: ^0.13.0-nullsafety.2
+  build: ^2.0.1
+  source_gen: ^1.0.0
+  bloc: 7.0.0
 #  path: ^1.6.0
 
 dev_dependencies:
-  build_runner: 1.11.1
+  build_runner: ^2.0.2
   pedantic: ^1.8.0
- # gql_code_gen: ^0.1.5
+  # gql_code_gen: ^0.1.5
   graphql_to_dart:
     path: ../
