--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
 
 dependencies:
   yaml: ^3.1.0
-  graphql: ^5.0.0-nullsafety.4
+  graphql: 5.0.0-nullsafety.4
   gql: ^0.13.0-nullsafety.2
   build: ^2.0.1
   source_gen: ^1.0.0
